# signup-services

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
application/: change_password_usecase.py  delete_user_usecase.py  signup_usecase.py
core/: settings.py  urls.py
domain/: event.py  events.py  user.py
infra/: fake_dispatcher.py  rabbitq_dispatcher.py
signup/: models.py  views.py
signup/migrations/: 0001_initial.py
