[tool.poetry]
name = "signup"
version = "0.1.0"
description = ""
authors = ["Felipe Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-ninja = "^1.2.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
